3 more hours of debugging